# preprocessing-unstructured-data-for-LLM-applications

./: pyproject.toml
notebooks/: 1-normalization.ipynb  2-metadata_extraction_chunking.ipynb  3-processing_pdf_and_images.ipynb  4-extracting_tables.ipynb  5-build_your_own_rag.ipynb
src/utils/: utils.py
